--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ npm-debug.*
 *.orig.*
 web-build/
 web-report/
+
+#awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.*
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
