--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.2.1",
     "aws-amplify": "^1.1.40",
     "aws-amplify-react-native": "^2.1.19",
-    "@react-native-community/cameraroll": "^1.2.1",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-google-app-auth": "^7.0.0",
@@ -21,6 +21,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-aws3": "0.0.9",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-slideshow": "^1.0.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
     "react-redux": "^7.1.1",
